--- a/Revels'18/Base.lproj/Main.storyboard
+++ b/Revels'18/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -113,7 +114,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jcz-Hz-Y9A" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1849" y="-109"/>
+            <point key="canvasLocation" x="1673" y="-1052"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="GGv-lT-uT0">
@@ -121,12 +122,13 @@
                 <tabBarController storyboardIdentifier="TabBarView" automaticallyAdjustsScrollViewInsets="NO" id="gJG-Kx-nAg" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" id="S43-4z-QuL">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="JTw-T7-5FA" kind="relationship" relationship="viewControllers" id="maf-VP-sHI"/>
-                        <segue destination="BMd-fK-MLB" kind="relationship" relationship="viewControllers" id="YnH-oI-cL3"/>
+                        <segue destination="Fac-SW-eNk" kind="relationship" relationship="viewControllers" id="YnH-oI-cL3"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="muX-7V-WtI" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -136,19 +138,35 @@
         <!--About-->
         <scene sceneID="fyx-sM-4tv">
             <objects>
-                <tableViewController id="BMd-fK-MLB" sceneMemberID="viewController">
+                <tableViewController id="BMd-fK-MLB" customClass="AboutTableViewController" customModule="Revels_18" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="LhY-il-kus">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="jG0-DA-ko6">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AboutCell" rowHeight="53" id="jG0-DA-ko6" customClass="AboutViewCell" customModule="Revels_18" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="53"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jG0-DA-ko6" id="6r5-rO-qwb">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="52.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pen-Qz-PEi">
+                                            <rect key="frame" x="16" y="11" width="349" height="25"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Pen-Qz-PEi" firstAttribute="leading" secondItem="6r5-rO-qwb" secondAttribute="leadingMargin" id="Af1-Bu-hZj"/>
+                                        <constraint firstItem="Pen-Qz-PEi" firstAttribute="top" secondItem="6r5-rO-qwb" secondAttribute="topMargin" id="bpf-dE-MKR"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Pen-Qz-PEi" secondAttribute="bottom" id="vBK-pG-EAw"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="aboutLabel" destination="Pen-Qz-PEi" id="esG-So-f3n"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -156,11 +174,32 @@
                             <outlet property="delegate" destination="BMd-fK-MLB" id="Mxf-52-953"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="About" id="YbT-hr-kzf"/>
+                    <navigationItem key="navigationItem" title="About" largeTitleDisplayMode="never" id="1RR-6U-n55">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="bnd-0Z-poY"/>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HnP-Jq-IEO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1849" y="1847"/>
+            <point key="canvasLocation" x="2528.8000000000002" y="1083.5082458770617"/>
+        </scene>
+        <!--About-->
+        <scene sceneID="V8H-Uf-Srv">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Fac-SW-eNk" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="About" id="YbT-hr-kzf"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="PBn-oT-xix">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BMd-fK-MLB" kind="relationship" relationship="rootViewController" id="58K-8h-fif"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="t9L-ke-IZ2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1673" y="1084"/>
         </scene>
     </scenes>
 </document>
