--- a/Revels'18/Base.lproj/Main.storyboard
+++ b/Revels'18/Base.lproj/Main.storyboard
@@ -57,9 +57,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u79-lC-9dF">
-                                <rect key="frame" x="37" y="593" width="300" height="45"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u79-lC-9dF">
+                                <rect key="frame" x="57" y="613" width="261" height="34"/>
                                 <color key="backgroundColor" name="alternateSelectedControlColor" catalog="System" colorSpace="catalog"/>
                                 <state key="normal" title="Continue">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -70,6 +69,11 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.44030570000000002" blue="0.4797278962" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="dsP-bf-tb3" firstAttribute="bottom" secondItem="u79-lC-9dF" secondAttribute="bottom" constant="20" id="GAR-FY-o58"/>
+                            <constraint firstItem="dsP-bf-tb3" firstAttribute="trailing" secondItem="u79-lC-9dF" secondAttribute="trailing" constant="57" id="R5b-Ay-tmp"/>
+                            <constraint firstItem="u79-lC-9dF" firstAttribute="leading" secondItem="dsP-bf-tb3" secondAttribute="leading" constant="57" id="Sez-fq-Tpv"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="dsP-bf-tb3"/>
                     </view>
                     <connections>
@@ -81,7 +85,7 @@
             </objects>
             <point key="canvasLocation" x="149.59999999999999" y="658.92053973013503"/>
         </scene>
-        <!--Events-->
+        <!--Events Collection Collection View Controller-->
         <scene sceneID="uEQ-Hb-2Xk">
             <objects>
                 <collectionViewController storyboardIdentifier="EventsView" id="JTw-T7-5FA" customClass="EventsCollectionCollectionViewController" customModule="Revels_18" customModuleProvider="target" sceneMemberID="viewController">
@@ -110,11 +114,11 @@
                             <outlet property="delegate" destination="JTw-T7-5FA" id="r6I-9s-rpZ"/>
                         </connections>
                     </collectionView>
-                    <tabBarItem key="tabBarItem" title="Events" selectedImage="Trophy" id="6F5-gx-CAm"/>
+                    <tabBarItem key="tabBarItem" systemItem="featured" id="6F5-gx-CAm"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jcz-Hz-Y9A" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1951" y="-1143"/>
+            <point key="canvasLocation" x="1673" y="-1154"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="GGv-lT-uT0">
@@ -135,75 +139,94 @@
             </objects>
             <point key="canvasLocation" x="913" y="-109"/>
         </scene>
-        <!--About-->
-        <scene sceneID="fyx-sM-4tv">
-            <objects>
-                <tableViewController id="BMd-fK-MLB" customClass="AboutTableViewController" customModule="Revels_18" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="LhY-il-kus">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AboutCell" rowHeight="53" id="jG0-DA-ko6" customClass="AboutViewCell" customModule="Revels_18" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="53"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jG0-DA-ko6" id="6r5-rO-qwb">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="52.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pen-Qz-PEi">
-                                            <rect key="frame" x="16" y="11" width="349" height="25"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstItem="Pen-Qz-PEi" firstAttribute="leading" secondItem="6r5-rO-qwb" secondAttribute="leadingMargin" id="Af1-Bu-hZj"/>
-                                        <constraint firstItem="Pen-Qz-PEi" firstAttribute="top" secondItem="6r5-rO-qwb" secondAttribute="topMargin" id="bpf-dE-MKR"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="Pen-Qz-PEi" secondAttribute="bottom" id="vBK-pG-EAw"/>
-                                    </constraints>
-                                </tableViewCellContentView>
-                                <connections>
-                                    <outlet property="aboutLabel" destination="Pen-Qz-PEi" id="esG-So-f3n"/>
-                                </connections>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="BMd-fK-MLB" id="AFS-No-EHD"/>
-                            <outlet property="delegate" destination="BMd-fK-MLB" id="Mxf-52-953"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="About" largeTitleDisplayMode="never" id="1RR-6U-n55">
-                        <barButtonItem key="backBarButtonItem" title="Back" id="bnd-0Z-poY"/>
-                    </navigationItem>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="HnP-Jq-IEO" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2528.8000000000002" y="1083.5082458770617"/>
-        </scene>
         <!--Navigation Controller-->
         <scene sceneID="V8H-Uf-Srv">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Fac-SW-eNk" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" selectedImage="Tab Bar More" systemItem="more" id="YbT-hr-kzf"/>
+                    <tabBarItem key="tabBarItem" selectedImage="Tab Bar More" systemItem="more" id="YbT-hr-kzf">
+                        <color key="badgeColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBarItem>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="PBn-oT-xix">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="PBn-oT-xix">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BMd-fK-MLB" kind="relationship" relationship="rootViewController" id="58K-8h-fif"/>
+                        <segue destination="ocg-Fe-Cvr" kind="relationship" relationship="rootViewController" id="ubu-sK-Y7s"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t9L-ke-IZ2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1673" y="1084"/>
         </scene>
+        <!--About-->
+        <scene sceneID="mlq-ic-HLb">
+            <objects>
+                <viewController id="ocg-Fe-Cvr" customClass="AboutViewController" customModule="Revels_18" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="uPR-2u-vMJ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GIZ-5c-jtd">
+                                <rect key="frame" x="0.0" y="160" width="375" height="394"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="AboutCell" id="PA4-2a-wpd" customClass="AboutViewCell" customModule="Revels_18" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="PA4-2a-wpd" id="4VT-Y0-jBo">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ITo-X6-bqm">
+                                                    <rect key="frame" x="15" y="11" width="42" height="22"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="ITo-X6-bqm" firstAttribute="leading" secondItem="4VT-Y0-jBo" secondAttribute="leadingMargin" id="UcA-U4-IPh"/>
+                                                <constraint firstItem="ITo-X6-bqm" firstAttribute="top" secondItem="4VT-Y0-jBo" secondAttribute="topMargin" id="VCt-s6-GLL"/>
+                                                <constraint firstItem="ITo-X6-bqm" firstAttribute="bottom" secondItem="4VT-Y0-jBo" secondAttribute="bottomMargin" id="v3p-w7-Hje"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="aboutLabel" destination="ITo-X6-bqm" id="wU1-Fn-i41"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Revels Logo" translatesAutoresizingMaskIntoConstraints="NO" id="x6O-H8-ERp">
+                                <rect key="frame" x="130" y="25" width="115" height="115"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.1176481619477272" green="0.11764507740736008" blue="0.11764716356992722" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="GIZ-5c-jtd" firstAttribute="leading" secondItem="FZ8-Vv-mZY" secondAttribute="leading" id="1ja-cC-1ec"/>
+                            <constraint firstItem="x6O-H8-ERp" firstAttribute="centerX" secondItem="uPR-2u-vMJ" secondAttribute="centerX" id="Dyt-Br-0Hs"/>
+                            <constraint firstItem="x6O-H8-ERp" firstAttribute="leading" secondItem="FZ8-Vv-mZY" secondAttribute="leading" constant="130" id="E8b-Wy-6vB"/>
+                            <constraint firstItem="GIZ-5c-jtd" firstAttribute="trailing" secondItem="FZ8-Vv-mZY" secondAttribute="trailing" id="KyT-gG-TrV"/>
+                            <constraint firstItem="GIZ-5c-jtd" firstAttribute="top" secondItem="x6O-H8-ERp" secondAttribute="bottom" constant="20" id="LzZ-4V-JBq"/>
+                            <constraint firstItem="x6O-H8-ERp" firstAttribute="top" secondItem="FZ8-Vv-mZY" secondAttribute="top" constant="25" id="Vvt-ZQ-PIv"/>
+                            <constraint firstItem="GIZ-5c-jtd" firstAttribute="bottom" secondItem="FZ8-Vv-mZY" secondAttribute="bottom" id="efT-c2-X2t"/>
+                            <constraint firstItem="GIZ-5c-jtd" firstAttribute="top" secondItem="FZ8-Vv-mZY" secondAttribute="top" constant="160" id="mE4-xl-rvM"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="FZ8-Vv-mZY"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="About" largeTitleDisplayMode="always" id="u3M-RX-8m7"/>
+                    <connections>
+                        <outlet property="tableView" destination="GIZ-5c-jtd" id="369-wp-7TH"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uS2-nF-uBg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2607.1999999999998" y="1082.608695652174"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="Revels Logo" width="512" height="512"/>
         <image name="Tab Bar More" width="120" height="120"/>
-        <image name="Trophy" width="25" height="25"/>
     </resources>
 </document>
