--- a/Revels'18/Base.lproj/Main.storyboard
+++ b/Revels'18/Base.lproj/Main.storyboard
@@ -185,15 +185,25 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nZk-Ps-u2f">
+                                                    <rect key="frame" x="348" y="0.0" width="12" height="43.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="nZk-Ps-u2f" secondAttribute="trailing" constant="15" id="8Ug-WS-CmQ"/>
                                                 <constraint firstItem="ITo-X6-bqm" firstAttribute="leading" secondItem="4VT-Y0-jBo" secondAttribute="leadingMargin" id="UcA-U4-IPh"/>
                                                 <constraint firstItem="ITo-X6-bqm" firstAttribute="top" secondItem="4VT-Y0-jBo" secondAttribute="topMargin" id="VCt-s6-GLL"/>
+                                                <constraint firstItem="nZk-Ps-u2f" firstAttribute="top" secondItem="4VT-Y0-jBo" secondAttribute="top" id="c9s-a3-scY"/>
+                                                <constraint firstAttribute="bottom" secondItem="nZk-Ps-u2f" secondAttribute="bottom" id="ehh-el-UoC"/>
                                                 <constraint firstItem="ITo-X6-bqm" firstAttribute="bottom" secondItem="4VT-Y0-jBo" secondAttribute="bottomMargin" id="v3p-w7-Hje"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="aboutLabel" destination="ITo-X6-bqm" id="wU1-Fn-i41"/>
+                                            <segue destination="Lb4-JY-MYy" kind="show" identifier="RevelsHomePage" id="UQC-8x-9DU"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -223,6 +233,21 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uS2-nF-uBg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2607.1999999999998" y="1082.608695652174"/>
+        </scene>
+        <!--Revels Home Page Controller-->
+        <scene sceneID="Fk3-Q2-5hw">
+            <objects>
+                <viewController id="Lb4-JY-MYy" customClass="RevelsHomePageController" customModule="Revels_18" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="f8M-z5-yl0">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="awe-he-Vq9"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qyY-9o-3nd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3543" y="738"/>
         </scene>
     </scenes>
     <resources>
